--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,59 @@
     transform: rotate(360deg);
   }
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
+:root {
+  --primary--white: #fff;
+  --primary--orange: #f9ab00;
+  --primary--dark: rgba(255, 255, 255, 0);
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+/*************************************NAVBAR STYLES***********************************************/
+.Logo {
+  width: 16.25rem;
+}
+
+/*************************************MENU STYLES***********************************************/
+nav a.nav-link {
+  font-weight: 500;
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+}
+
+nav ul li {
+  text-transform: uppercase;
+}
+
+.navbar-nav > li > a {
+  color: var(--primary--white) !important;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+  border-top: 0.1875rem solid var(--primary--dark);
+}
+
+.navbar-brand {
+  max-width: 17.25rem;
+  padding: 0 !important;
+  height: 6rem !important;
+}
+
+.navbar-collapse.in {
+  display: block !important;
+}
+
+/* If I change my mind and want the active tab to always be visible with the orange bar, then delete  the a:active below */
+.navbar-nav > li > a.active,
+.navbar-nav > li > a.active:focus {
+  border-top: 0.1875rem solid var(--primary--orange);
+}
+
+/* If I change my mind and want the active tab to always be visible with the orange bar, then comment out the a:hover below */
+.navbar-nav > li > a:hover {
+  border-top: 0.1875rem solid var(--primary--orange);
+}
