--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,8 @@
   --primary--white: #fff;
   --primary--orange: #f9ab00;
   --primary--dark: rgba(255, 255, 255, 0);
+  --primary--red: #ef4035;
+  --primary-hover-red: #f33501;
 }
 
 body {
@@ -50,6 +52,10 @@ body {
 }
 
 /*************************************NAVBAR STYLES***********************************************/
+nav {
+  z-index: 2;
+}
+
 .Logo {
   width: 16.25rem;
 }
@@ -78,6 +84,12 @@ nav ul li {
   height: 6rem !important;
 }
 
+@media (max-width: 768px) {
+  .navbar-brand {
+    width: 7rem;
+  }
+}
+
 .navbar-collapse.in {
   display: block !important;
 }
@@ -91,4 +103,78 @@ nav ul li {
 /* If I change my mind and want the active tab to always be visible with the orange bar, then comment out the a:hover below */
 .navbar-nav > li > a:hover {
   border-top: 0.1875rem solid var(--primary--orange);
+}
+
+/**************************** HEADER ****************************/
+.header-wraper {
+  position: relative;
+  background: url(wall-and-laptop-background.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  z-index: 1;
+}
+
+.main-info h1 {
+  color: var(--primary--orange);
+  text-transform: uppercase;
+}
+
+@media (max-width: 768px) {
+  .main-info h1 {
+    font-size: 1.7rem !important;
+  }
+  .typed-text {
+    font-size: 1.3rem !important;
+  }
+}
+
+/******* TYPED TEXT *******/
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary--white);
+}
+
+/******* HEADER BUTTON *******/
+.btn-main-offer {
+  border: 1px solid var(--primary--red);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+  color: var(--primary--white);
+  margin: 2rem;
+}
+
+.btn-main-offer:hover {
+  text-decoration: none;
+  background-color: var(--primary-hover-red);
+  transition: 0.2s ease-in-out;
+}
+
+/******* PARTICLES *******/
+.tsparticles-canvas-el {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .particles-canvas {
+    display: none;
+  }
 }
