--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 :root {
-  --primary--white: #fff;
+  --primary--white: #ffffff;
+  --primary-light-grey: #d3d3d3;
   --primary--orange: #f9ab00;
-  --primary--dark: rgba(255, 255, 255, 0);
+  --primary--dark: rgb(52, 58, 64);
   --primary--red: #ef4035;
   --primary-hover-red: #f33501;
 }
@@ -193,4 +194,50 @@ nav ul li {
   .profile-img {
     width: 20rem;
   }
+}
+
+/******* SERVICES *******/
+.skillset {
+  padding-bottom: 2rem;
+  background: var(--primary-light-grey);
+  text-align: center;
+}
+
+.skillset .circle {
+  position: relative;
+  margin: 0.375rem auto;
+  background: var(--primary--orange);
+  border-radius: 50%;
+  width: 3.125rem;
+  height: 3.125rem;
+}
+
+.skillset .icon-pic {
+  font-size: 1.4rem;
+  color: var(--primary--white);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.skillset .box {
+  height: 16rem;
+  border-bottom: 0.3125rem solid var(--primary--orange);
+  padding: 0.625rem;
+  margin-bottom: 1.875rem;
+  background: var(--primary--white);
+}
+
+.skillset .box:hover {
+  background: var(--primary--orange);
+  border-bottom: 0.3125rem solid var(--primary--dark);
+}
+
+.skillset .box:hover .icon-pic {
+  color: var(--primary--dark);
+}
+
+.skillset .box:hover .circle {
+  background: var(--primary--white);
 }
